# game.libretro.hatari

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/hatari/: CMakeLists.txt  hatari.txt
game.libretro.hatari/: addon.xml  addon.xml.in
game.libretro.hatari/resources/: settings.xml
game.libretro.hatari/resources/language/English/: strings.po
